--- a/final1/final_project.html
+++ b/final1/final_project.html
@@ -33,7 +33,7 @@
 	<h2>More about me</h2>
 	<details>
 		<summary>My childhood</summary>
-		<p>I grow up in Belgium with my parents, my brother and my sister. I still live there, where I can &quot;enjoy&quot; the 300 days of rain out of 365.</p>
+		<p>I grew up in Belgium with my parents, my brother and my sister. I still live there, where I can &quot;enjoy&quot; the 300 days of rain out of 365.</p>
 	</details>
 </section>
 </body>
